--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,22 +77,22 @@
 }
 
 @media (width > 576px) {
-    ::-webkit-scrollbar {
-        width: 15px;
-    }
+    /*::-webkit-scrollbar {*/
+    /*    width: 15px;*/
+    /*}*/
 
-    ::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
+    /*::-webkit-scrollbar-track {*/
+    /*    background-color: transparent;*/
+    /*}*/
 
-    ::-webkit-scrollbar-thumb {
-        background-color: #d6dee1;
-        border-radius: 20px;
-        border: 5px solid transparent;
-        background-clip: content-box;
-    }
+    /*::-webkit-scrollbar-thumb {*/
+    /*    background-color: #d6dee1;*/
+    /*    border-radius: 20px;*/
+    /*    border: 5px solid transparent;*/
+    /*    background-clip: content-box;*/
+    /*}*/
 
-    ::-webkit-scrollbar-thumb:hover {
-        background-color: #a8bbbf;
-    }
+    /*::-webkit-scrollbar-thumb:hover {*/
+    /*    background-color: #a8bbbf;*/
+    /*}*/
 }
